@@ -678,8 +678,10 @@ Behaviour at endpoint for Double Exponential (DE) methods: either a scalar
 \li{Bernoulli number $B_n$ as real/rational}{bernreal$(n)${\rm, }bernfrac}
 \li{$[B_0,B_2,\dots B_{2k}]$}{bernvec$(k)$}
 \li{Bernoulli polynomial $B_n(x)$}{bernpol$(n,\{x\})$}
-\li{Euler numbers / polynomials}{eulerfrac{\rm, }eulervec{\rm, }eulerpol}
-\li{$n$-th Fibonacci number}{fibonacci$(n)$}
+\li{Euler numbers}{eulerfrac{\rm, }eulervec}
+\li{Euler polynomials $E_n(x)$}{eulerpol$(n,\{x\})$}
+\li{Eulerian polynomials $A_n(x)$}{eulerianpol}
+\li{Fibonacci number $F_n$}{fibonacci$(n)$}
 \li{Stirling numbers $s(n,k)$ and $S(n,k)$}{stirling$(n,k,\{\fl\})$}
 \li{number of partitions of $n$}{numbpart$(n)$}
 \li{$k$-th permutation on $n$ letters}{numtoperm$(n,k)$}
