@@ -2574,6 +2574,7 @@ GEN     polcyclo_eval(long n, GEN x);
 GEN     dirdiv(GEN x, GEN y);
 GEN     dirmul(GEN x, GEN y);
 GEN     equivclasses(GEN F);
+GEN     eulerianpol(long N, long v);
 GEN     gprec_wensure(GEN x, long pr);
 GEN     gen_indexsort(GEN x, void *E, int (*cmp)(void*,GEN,GEN));
 GEN     gen_indexsort_uniq(GEN x, void *E, int (*cmp)(void*,GEN,GEN));
