@@ -173,6 +173,7 @@ BA  61- new GP function lfunshift
     62- [libpari] Q_lval, Q_lvalrem
 BA  63- [libpari] ZXX_evalx0, zx_z_divexact, zx_lval
     64- [libpari] is_qfb_t
+    65- new GP function eulerianpol
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
